--- a/meiduo_hersin/templates/register.html
+++ b/meiduo_hersin/templates/register.html
@@ -3,13 +3,16 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>美多商城-注册</title>
-	<link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../static/css/main.css">
+    <link rel="stylesheet" type="text/css" href="{{ static('css/reset.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ static('css/main.css') }}">
+    <script type="text/javascript" src="{{ static('js/vue-2.5.16.js') }}"></script>
+    <script type="text/javascript" src="{{ static('js/axios-0.18.0.min.js') }}"></script>
 </head>
 <body>
-	<div class="register_con">
+	<div id="app">
+        <div class="register_con">
 		<div class="l_con fl">
-			<a href="../static/index.html" class="reg_logo"><img src="../static/images/logo.png"></a>
+			<a href="../static/index.html" class="reg_logo"><img src="{{ static('images/logo.png') }}"></a>
 			<div class="reg_slogan">商品美 · 种类多 · 欢迎光临</div>
 			<div class="reg_banner"></div>
 		</div>
@@ -20,27 +23,28 @@
 				<a href="../static/login.html">登录</a>
 			</div>
 			<div class="reg_form clearfix">
-				<form method="post" class="register_form">
-				<ul>
+				<form method="post" class="register_form" v-on:submit="on_submit">
+				{{ csrf_input }}
+                    <ul>
 					<li>
 						<label>用户名:</label>
-						<input type="text" name="username" id="user_name">
-						<span class="error_tip">请输入5-20个字符的用户</span>
-					</li>					
+						<input type="text" name="username" id="user_name" v-model="username" v-on:blur="check_username">
+						<span class="error_tip" v-show="error_name">[[ error_name_message ]]</span>
+					</li>
 					<li>
 						<label>密码:</label>
-						<input type="password" name="password" id="pwd">
-						<span class="error_tip">请输入8-20位的密码</span>
+						<input type="password" name="password" id="pwd" v-model="password" v-on:blur="check_password">
+						<span class="error_tip" v-show="error_password">[[ error_password_message ]]</span>
 					</li>
 					<li>
 						<label>确认密码:</label>
-						<input type="password" name="password2" id="cpwd">
-						<span class="error_tip">两次输入的密码不一致</span>
+						<input type="password" name="password2" id="cpwd" v-model="password2" v-on:blur="check_password2">
+						<span class="error_tip" v-show="error_password2">[[ error_password2_message ]]</span>
 					</li>
 					<li>
 						<label>手机号:</label>
-						<input type="text" name="mobile" id="phone">
-						<span class="error_tip">请输入正确的手机号码</span>
+						<input type="text" name="mobile" id="phone" v-model="mobile" v-on="check_mobile">
+						<span class="error_tip" v-show="error_mobile">[[ error_mobile_message ]]</span>
 					</li>
 					<li>
                         <label>图形验证码:</label>
@@ -62,13 +66,14 @@
 					<li class="reg_sub">
 						<input type="submit" value="注 册">
 					</li>
-				</ul>				
+				</ul>
 				</form>
 			</div>
 
 		</div>
 
 	</div>
+    </div>
 
 	<div class="footer no-mp">
 		<div class="foot_link">
@@ -83,8 +88,8 @@
 		<p>CopyRight © 2016 北京美多商业股份有限公司 All Rights Reserved</p>
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
-	<script type="text/javascript" src="../static/js/host.js"></script>
-	<script type="text/javascript" src="../static/js/common.js"></script>
-	<script type="text/javascript" src="../static/js/register.js"></script>
+	<script type="text/javascript" src="{{ static('js/host.js') }}"></script>
+	<script type="text/javascript" src="{{ static('js/common.js') }}"></script>
+	<script type="text/javascript" src="{{ static('js/register.js') }}"></script>
 </body>
 </html>
